azure/aks/deploy/manifest/fastapi1/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: fastapi-namespace
  labels:
    app.kubernetes.io/name: fastapi-user-app
    environment: production
    pod-security.kubernetes.io/enforce: restricted
