azure/aks/deploy/manifest/fastapi1/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: fastapi-user-app
  namespace: fastapi-namespace
  labels:
    app: fastapi-user-app
  annotations:
    service.beta.kubernetes.io/azure-load-balancer-health-probe-request-path: "/"
spec:
  type: LoadBalancer
  selector:
    app: fastapi-user-app
  ports:
    - name: https
      port: 50443
      targetPort: 50443
      protocol: TCP
